--- a/src/app/laptop-list/laptop-list.component.html
+++ b/src/app/laptop-list/laptop-list.component.html
@@ -1,8 +1,17 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <ul class="navbar-nav">
-        <li class="nav-item" (click)="goToLaptop()" class="nav-link">Add Laptop
+        <li class="nav-item" (click)="goToLaptop()" style="color: white;" class="nav-link">AddLaptop
         </li>
+        <li class = "nav-item" (click)="goToBrandList(showroomId)" style="margin-left: 1000px;color: white;"class="nav-link" >Back
+            <!-- style="margin-left: 1100px;"  -->
+        </li>
+
+        <li class = "nav-item" (click)="goToHomepage()" style="margin-left: 60px;color: white;" class="nav-link" >BackToHompage
+            
+        </li>
+       
     </ul>
+
 </nav>
 <h2> Laptop </h2>
 <table class="table table-striped">
