--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,10 +1,138 @@
 <app-navbar></app-navbar>
-<!-- <div class="col-md-6 offset-md-3">
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-        <ul class = "navbar-nav">
-            <li class="nav-item" (click)="Admin()" class="nav-link"> 
+<body class="image">
+    <label class="text" style="color: white;" >Laptop Showrooms</label>
+    <div class="container">
 
-            </li>
-    
+        <ul *ngFor="let showroom of showrooms">
+            <div class="box-container">
+                <label class="head-text">LaptopShowroomName</label>
+                <!-- <ul class="unhide" style="color:red"> {{ showroom.laptopShowroomName }}</ul> -->
+                <div class="unhide">
+                    <button (click)="goToBrandList(showroom.showroomId)" style="font-size: 2.7ch;" class="btn btn-success"> {{ showroom.laptopShowroomName }}</button>
+
+                </div>
+
+          
+                <div class="hide">
+                    <ul> Location :{{ showroom.location }}</ul>
+                    <ul> Ph : {{ showroom.phoneNumber }}</ul>
+                </div>
+
+                <ul class="navbar-nav">
+                    <!-- <li class="nav-item" (click)="goToBrandList()" class="nav-link">Visit
+
+                    </li> -->
+
+                </ul>
+
+            </div>
+
         </ul>
- </nav> -->
+    </div>
+
+</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <ul class = "navbar-nav">
+        <li class = "nav-item" (click)="goToShowroomList()" class="nav-link" >Showroom List
+           
+        </li>
+        <li class = "nav-item" (click)="goToShowroom()" class="nav-link" >Add Showroom
+            
+        </li>
+    </ul>
+  </nav>
+<h2> Showroom </h2>
+<table class = "table table-striped">
+    <thead>
+        <tr>
+            <th> laptopShowroomName </th>
+            <th> location</th>
+            <th> phoneNumber</th>
+            <th> Action</th>
+        </tr>
+    </thead>
+
+<tbody>
+    <tr *ngFor="let showroom of showrooms ">
+        <td> {{ showroom.laptopShowroomName }} </td>
+        <td> {{ showroom.location }} </td>
+        <td> {{ showroom.phoneNumber }} </td>
+        <td>
+            <button (click) = "updateShowroom(showroom.showroomId)" class="btn btn-success"> Update</button>
+            <button (click) = "deleteShowroom(showroom.showroomId)" class="btn btn-danger " style="margin-left: 10px">
+                Delete</button>
+            
+                <button (click) = "showroomDetails(showroom.showroomId)" class="btn btn-info " style="margin-left: 10px"> View</button>
+        <label for="showrooms " style="margin-left: 10px"  class="btn btn-info ">Edit</label>
+        <select name="showroom" (change)="onSelect($any($event.target).value,showroom.showroomId)">
+            
+            <option vlaue="brand" selected="true" >Brand</option>
+            <option value="laptop" selected="true" >Laptop</option>  
+           
+          </select>
+    
+            </td>
+    </tr>
+</tbody>
+</table> -->
