--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 <section class="login-block">
     <div class="container">
         <div class="row ">
@@ -10,26 +10,26 @@
                     <label for="email" class="text-uppercase">Email</label>
                     <input type="email"  class="form-control" name="email"   placeholder="email" id="email" [(ngModel)]="login.email">
                     <span class="text-danger" >
-                        <!-- Email is required. -->
+                        Email is required.
                     </span>
                 </div>
                 <div class="form-group">
                     <label for="password" class="text-uppercase">Password</label>
                     <input  class="form-control" type="password"  name="password" placeholder="password" id="password" [(ngModel)]="login.password">
                     <span class="text-danger" >
-                        <!-- Password is required. -->
+                        Password is required.
                     </span>
                 </div>
                 <div class="form-group">
                     <div  class="text-center">
-                        <!-- <div class="spinner-border text-primary " role="status">
+                        <div class="spinner-border text-primary " role="status">
                             <span class="sr-only">Loading...</span>
-                            </div> -->
+                            </div>
                     </div>
                     <span class="text-danger" >
-                    <!-- <p>Custom Error Message!</p> -->
+                    <p>Custom Error Message!</p>
                     </span>
-                    <!-- <input  type="submit" class="btn btn-login float-right"  value="Login"> -->
+                   <input  type="submit" class="btn btn-login float-right"  value="Login">
                     <button type="submit" class="btn btn-login float-right" >Login</button>
                 </div>
                 <div class="clearfix"></div>
@@ -41,4 +41,4 @@
         </div>
     </div>
 </section>
- -->
+
