--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="javascript:void(0);" routerLink="/">Welcome</a>
-    <li class="nav-item" (click)="goToAdmin()" class="nav-link"> Admin
+    <li class="nav-item" (click)="goToAdmin()" style="color: white ; font-size: 2ch;" class="nav-link"> Admin
 
     </li>
+    <!-- <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 1100px;"   class="nav-link" >BackToHompage
+            
+    </li> -->
+
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto"  >
            
-            <!-- <li class="nav-item"><a href="javascript:void(0);" routerLink="/register"  class="nav-link" >Register</a></li>
-            <li><a class="nav-link" href="javascript:void(0);" routerLink="/login" >Login</a></li> -->
-            <!-- <li><a class="nav-link" href="javascript:void(0);"  (click)="logout()" >Logout</a></li> -->
+           
         </ul>
 
     </div>
