--- a/src/app/slogin/slogin.component.html
+++ b/src/app/slogin/slogin.component.html
@@ -1,26 +1,39 @@
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="javascript:void(0);" routerLink="/">Welcome</a>
+     <!-- <li class="nav-item" (click)="goToAdmin()" style="color: white ; font-size: 2ch;" class="nav-link"> Admin
+
+    </li>  -->
+    <li class="nav-item" (click)="goToLogOut()" style="color: white ; font-size: 2ch; margin-left: 1180px;" class="nav-link"> LogOut
+
+    </li>
+    
+</nav>
+<body class="image">
+
 <div class="bg-container">
-    <div class="form-container shadow-lg p-4 mb-5 bg-black rounded">
-        <form [formGroup] = "loginForm" (ngSubmit) ="onSubmit()" class="m-3 mt-4">
+    <div class="form-container ">
+        <form [formGroup] = "loginForm" (ngSubmit) ="onSubmit()" class="m-3 mt-4" class="insidefrom">
             <p  class="crediential-names mt-3 login-text">User Mail</p>
-            <input type="text" placeholder="Enter mail"  formControlName="adminEmail">
+            <input type="text" placeholder="Enter mail"  formControlName="adminEmail" class="mail">
             <br> 
             <span style="color: red;" class="warning-msg" *ngIf="f.adminEmail && f.adminEmail.invalid && f.adminEmail.touched">*Required</span>
             <p class="crediential-names mt-3 login-text">Password</p>
-            <input type="password" id="password" placeholder="Enter password" formControlName="password">
+            <input type="password" id="password" placeholder="Enter password" formControlName="password" class="mail">
             <br>
             <span style="color: red;" class="warning-msg" *ngIf="f.password && f.password.invalid && f.password.touched">*Required</span>
         
             <div class="mt-1 mb-2 d-flex align-items-center">
                 <input type="checkbox" onchange="document.getElementById('password').type = this.checked ? 'text' : 'password'"> 
-                <label class="form-title" for="password" style="margin-left: 5px; font-size: 12px; color:aliceblue">Show password</label>
+                <label class="form-title" for="password" style="margin-left: 5px; font-size: 15px; color:black">Show password</label>
             </div>
 
              <div class="text-center m-0">
                 <button type="submit" class="btn btn-success m-0 border border-dark" >Login</button>
              </div>
              <br>
-            <p style="color: red;"  class="warning-msg1 text-center">Don't have an account? <a routerLink="/register" class="link-primary">SingUp</a></p>
+            <p style="color: red;"  class="warning-msg1 text-center">Don't have an account? <a routerLink="/sregister" class="link-primary">SingUp</a></p>
             <br>
         </form>
     </div>
 </div>
+</body>
