--- a/src/app/showroom/showroom.component.html
+++ b/src/app/showroom/showroom.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <ul class = "navbar-nav">
-        <li class = "nav-item" (click)="goToShowroomList()" class="nav-link" >ShowroomList
+        <!-- <li class = "nav-item" (click)="goToShowroomList()" class="nav-link" >ShowroomList
            
-        </li>
+        </li> -->
         <li class = "nav-item" (click)="goToShowroom()" class="nav-link" >AddShowroom
             
         </li>
 
-        <li class = "nav-item" (click)="goToHomepage()" style="margin-left: 1000px;" class="nav-link" >BackToHompage
+        <li class = "nav-item" (click)="onLogOut()" style="margin-left: 1200px;" class="nav-link" >LogOut
             
         </li>
         
@@ -18,9 +18,9 @@
 <table class = "table table-striped">
     <thead>
         <tr>
-            <th> laptopShowroomName </th>
-            <th> location</th>
-            <th> phoneNumber</th>
+            <th> LaptopShowroomName </th>
+            <th> Location</th>
+            <th> PhoneNumber</th>
             <th> Action</th>
         </tr>
     </thead>
