--- a/src/app/update-laptop/update-laptop.component.html
+++ b/src/app/update-laptop/update-laptop.component.html
@@ -1,8 +1,9 @@
 <div class="col-md-6 offset-md-3">
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a routerLink="laptops" routerLinkActive="active" class="nav-link">Laptop List</a>
+           
+            <li class="nav-item" (click)="goToLaptops(brandId)"  style="color: white;" class="nav-link">Back  
+
             </li>
 
         </ul>
