--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,51 +1,55 @@
-.container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100vw;
-    border-color: red;
-    /* background-color: aquamarine; */
-    height: 100px;
-    margin-top: 10px;
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100vw;
+  border-color: red;
+  /* background-color: aquamarine; */
+  height: 100px;
+  margin-top: 10px;
 }
-    
 
-.box-container{
-    margin-top: 10px;
-    width: 13vw;
-    height: 100px;
-    border-radius: 10px;
-    border-color: red;
-    color: white;
-    /* background-color: bisque; */
+
+.box-container {
+  margin-top: 10px;
+  width: 13vw;
+  height: 100px;
+  border-radius: 10px;
+  border-color: red;
+  color: white;
+  /* background-color: bisque; */
 }
 
 .hide {
-    display: none;
-  }
-  .unhide:hover + .hide {
-    display: block;
-    font-size: 2ch;
-    background-color: black;
-  }
+  display: none;
+}
 
-  .image{
-    background-image: url("img/91.png");
-   position: absolute;
-   background-position: center;
-   background-size: cover;
-   /* width: 100px; */
-   height: 599px;
-    
-  }
-  body,html{
-    width: 99.9%;
-    height: 99.2%;
-  }
+.unhide:hover+.hide {
+  display: block;
+  font-size: 2ch;
+  background-color: black;
+}
 
-  .text{
-    text-align: center;
-    margin-left: 600px;
-    font-size: 4ch;
-  }
+.image {
+  background-image: url("img/91.png");
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  /* width: 100px; */
+  height: 672px;
+
+}
+
+body,
+html {
+  width: 100%;
+  height: 99.2%;
+}
+
+.text {
+  text-align: center;
+  margin-left: 600px;
+  font-size: 4ch;
+}
+
