--- a/src/app/laptop-list/laptop-list.component.html
+++ b/src/app/laptop-list/laptop-list.component.html
@@ -2,7 +2,7 @@
     <ul class="navbar-nav">
         <li class="nav-item" (click)="goToLaptop()" style="color: white;" class="nav-link">AddLaptop
         </li>
-        <li class = "nav-item" (click)="goToBrandList(showroomId)" style="margin-left: 1000px;color: white;"class="nav-link" >Back
+        <li class = "nav-item" (click)="goToBrandList(showroomId)" style="margin-left: 1160px;color: white;"class="nav-link" >Back
             <!-- style="margin-left: 1100px;"  -->
         </li>
 
@@ -13,13 +13,13 @@
     </ul>
 
 </nav>
-<h2> Laptop </h2>
+<h2> Laptop  List</h2>
 <table class="table table-striped">
     <thead>
         <tr>
-            <th> laptopName </th>
-            <th> price</th>
-            <th> version</th>
+            <th> LaptopName </th>
+            <th> Price</th>
+            <th> Version</th>
 
             <th> Action</th>
         </tr>
