--- a/src/app/update-brand/update-brand.component.html
+++ b/src/app/update-brand/update-brand.component.html
@@ -1,9 +1,14 @@
 <div class="col-md-6 offset-md-3">
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <ul class = "navbar-nav">
-            <li class = "nav-item">
-                <a routerLink="brands" routerLinkActive="active" class="nav-link" >Brand List</a>
+
+            <li class="nav-item" (click)="goToBrands(showroomId)"  style="color: white;" class="nav-link">Back  
+
             </li>
+         
+            <!-- <li class = "nav-item">
+                <a routerLink="brands" routerLinkActive="active" class="nav-link" >Brand List</a>
+            </li> -->
     
         </ul>
  </nav>
