--- a/src/app/update-showroom/update-showroom.component.html
+++ b/src/app/update-showroom/update-showroom.component.html
@@ -1,8 +1,8 @@
 <div class="col-md-6 offset-md-3">
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <ul class = "navbar-nav">
-            <li class = "nav-item">
-                <a routerLink="showrooms" routerLinkActive="active" class="nav-link" >Showroom List</a>
+            <li class="nav-item" (click)="goToShowroom()"  style="color: white;" class="nav-link">Back  
+
             </li>
             <li class = "nav-item">
                 <a routerLink="create-showroom" routerLinkActive="active" class="nav-link" >Add Showroom</a>
