--- a/src/app/user-brand/user-brand.component.html
+++ b/src/app/user-brand/user-brand.component.html
@@ -3,7 +3,11 @@
     <!-- <li class="nav-item" (click)="goToAdmin()" style="color: white ; font-size: 2ch;" class="nav-link"> Admin
 
     </li> -->
-    <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 1100px;color: white ;"   class="nav-link" >BackToHompage
+
+    <li class="nav-item" (click)="goToShowroomList()"  style="margin-left: 1150px;color: white;" class="nav-link">Back  
+
+    </li>
+    <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 40px;color: white ;"   class="nav-link" >BackToHompage
             
     </li>
 
