--- a/src/app/user-laptop/user-laptop.component.html
+++ b/src/app/user-laptop/user-laptop.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="javascript:void(0);" routerLink="/">Welcome</a>
-    <!-- <li class="nav-item" (click)="goToAdmin()" style="color: white ; font-size: 2ch;" class="nav-link"> Admin
-
-    </li> -->
-    <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 1100px;color: white ;"   class="nav-link" >BackToHompage
+   
+    <li class = "nav-item" (click)="goToBrandList(showroomId)" style="margin-left: 1150px;color: white;"class="nav-link" >Back
+        <!-- style="margin-left: 1100px;"  -->
+    </li>
+    <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 40px;color: white ;"   class="nav-link" >BackToHompage
             
     </li>
 
@@ -26,7 +27,10 @@
                 <label class="head-text">LaptopName</label>
                
                 <div class="unhide">
-                    <button  class="btn btn-success"> {{ laptop.laptopName }}</button>
+                    <!-- <button  class="btn btn-success"> {{ laptop.laptopName }}</button> -->
+
+                    <label  class="btn btn-success"> {{ laptop.laptopName }}</label>
+
 
                 </div>
 
