--- a/src/app/user-laptop/user-laptop.component.html
+++ b/src/app/user-laptop/user-laptop.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="javascript:void(0);" routerLink="/">Welcome</a>
+    <a class="navbar-brand" href="javascript:void(0);" style="margin-left: 50px;">Welcome</a>
    
-    <li class = "nav-item" (click)="goToBrandList(showroomId)" style="margin-left: 1150px;color: white;"class="nav-link" >Back
+    <li class = "nav-item" (click)="goToBrandList(showroomId)" style="margin-left: 1100px;color: white;font-size: 2ch;"class="nav-link" >Back
         <!-- style="margin-left: 1100px;"  -->
     </li>
-    <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 40px;color: white ;"   class="nav-link" >BackToHompage
+    <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 40px;color: white ;font-size: 2ch;"   class="nav-link" >BackToHompage
             
     </li>
 
@@ -29,7 +29,7 @@
                 <div class="unhide">
                     <!-- <button  class="btn btn-success"> {{ laptop.laptopName }}</button> -->
 
-                    <label  class="btn btn-success"> {{ laptop.laptopName }}</label>
+                    <label  class="btn btn-success" style="font-size: 2ch;"> {{ laptop.laptopName }}</label>
 
 
                 </div>
