--- a/src/app/brand-list/brand-list.component.html
+++ b/src/app/brand-list/brand-list.component.html
@@ -8,7 +8,7 @@
 
         </li>
 
-        <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 60px;color: white;"   class="nav-link" >BackToHompage
+        <li class = "nav-item" (click)="goToHomepage()"  style="margin-left: 20px;color: white;"   class="nav-link" >BackToShowroomPage
             
         </li>
        
@@ -30,14 +30,14 @@
             <td>{{brand.brandName}}</td>
 
             <td>
-                <button (click)="updateBrand(brand.brandId)" class="btn btn-success"> Update</button>
-                <button (click)="deleteBrand(brand.brandId)" class="btn btn-danger " style="margin-left: 10px">
+                <button (click)="updateBrand(brand.brandId)" class="btn btn-outline-secondary"> Update</button>
+                <button (click)="deleteBrand(brand.brandId)" class="btn btn-outline-danger " style="margin-left: 10px">
                     Delete</button>
 
-                <button (click)="brandDetails(brand.brandId)" class="btn btn-info " style="margin-left: 10px">
-                    View</button>
+                <!-- <button (click)="brandDetails(brand.brandId)" class="btn btn-info " style="margin-left: 10px">
+                    </button> -->
                 <button (click)="goToLaptopList(brand.brandId)" for="brands " style="margin-left: 10px"
-                    class="btn btn-primary">Laptop</button>
+                    class="btn btn-outline-warning">Laptop</button>
 
 
             </td>
