--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,21 @@
-<app-navbar></app-navbar>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="javascript:void(0);"  style="margin-left: 50px;">Welcome</a>
+   
+
+
+    <li class="nav-item" (click)="goToSerach()" style="margin-left: 1250px;color: white;font: bold;font-size: 2ch;" class="nav-link">Back  
+
+    </li>
+  
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto"  >
+           
+           
+        </ul>
+
+    </div>
+  </nav>
 
 <body class="image">
     <label class="text" style="color: white;">Laptop Showrooms</label>
