--- a/src/app/sregister/sregister.component.html
+++ b/src/app/sregister/sregister.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="javascript:void(0);" routerLink="/">Welcome</a>
+    <a class="navbar-brand" href="javascript:void(0);" style="margin-left: 50px;" routerLink="/">Welcome</a>
      <!-- <li class="nav-item" (click)="goToAdmin()" style="color: white ; font-size: 2ch;" class="nav-link"> Admin
 
     </li>  -->
-    <li class="nav-item" (click)="goToLogOut()" style="color: white ; font-size: 2ch; margin-left: 1180px;" class="nav-link"> Back
+    <li class="nav-item" (click)="goToLogOut()" style="color: white ; font-size: 2ch; margin-left: 1250px;" class="nav-link"> Back
 
     </li>
     
